<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.orbs.info.ui.home.HomeFragment"
        android:label="@string/title_p1_pos"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.orbs.info.ui.events.EventsFragment"
        android:label="@string/title_p2_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.orbs.info.ui.calculation.CalculationFragment"
        android:label="@string/title_p3_gas"
        tools:layout="@layout/fragment_calculation" />
</navigation>